Fixed mobile pagination overflow bug

--- a/styles/css/search/SearchList.css
+++ b/styles/css/search/SearchList.css
@@ -2,4 +2,14 @@
 	& .noSearchResults {
 		margin-left: 10%;
 	}
+
+	& .paginationContainer {
+		overflow-x: hidden;
+		width: 100%;
+	}
+
+	/* Flat-UI mobile view css fix */
+	& .pagination {
+		padding: 0;
+	}
 }
